[project]
name = "brand-reputation-monitor"
version = "1.0.0"
description = "Evidence-first brand reputation intelligence using Bright Data, Nebius, Agno, and Memori"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
authors = [{ name = "Tirth Rank" }]
dependencies = [
  "streamlit==1.59.2",
  "agno==2.8.0",
  "memori==3.3.6",
  "openai==2.46.0",
  "httpx==0.28.1",
  "beautifulsoup4==4.14.3",
  "pydantic==2.12.5",
  "python-dotenv==1.2.1",
  "plotly==6.5.2",
  "tenacity==9.1.4",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[dependency-groups]
dev = ["pytest==9.0.2", "ruff==0.14.14"]
